documentation for concord yaml elements (#106)